crates/macro/ui-tests/wasm-bindgen.stderr
error[E0433]: failed to resolve: could not find `__wbindgen_coverage` in `test`
  --> ui-tests/wasm-bindgen.rs:37:1
   |
37 | #[wasm_bindgen(wasm_bindgen = test)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ could not find `__wbindgen_coverage` in `test`
   |
   = note: this error originates in the attribute macro `wasm_bindgen` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0425]: cannot find function `future_to_promise` in module `test`
  --> ui-tests/wasm-bindgen.rs:40:1
   |
40 | #[wasm_bindgen(wasm_bindgen_futures = test)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not found in `test`
   |
   = note: this error originates in the attribute macro `wasm_bindgen` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider importing this function
   |
3  + use wasm_bindgen_futures::future_to_promise;
   |
